hover effect bug fix

--- a/index.html
+++ b/index.html
@@ -25,12 +25,23 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
         
         <!-- Link to external CSS file -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles.css?v=1.1">
     </head>
 
     <body>
         <!-- Main hero section containing all content -->
         <section class="hero-section">
+
+            <!-- Decorative background elements for visual appeal -->
+            <div class="decorative-elements">
+                <!-- Floating circle 1: Large yellow circle -->
+                <div class="floating-circle circle-1"></div>
+                <!-- Floating circle 2: Medium purple circle -->
+                <div class="floating-circle circle-2"></div>
+                <!-- Floating circle 3: Small red circle with pulse animation -->
+                <div class="floating-circle circle-3"></div>
+            </div>
+
             <!-- Container for hero content with max-width and centering -->
             <div class="hero-content">
                 <!-- Text content section with title and subtitle -->
@@ -45,16 +56,6 @@
                 <div class="cta-container">
                     <!-- Primary action button -->
                     <button class="cta-button">View My Projects</button>
-                </div>
-                
-                <!-- Decorative background elements for visual appeal -->
-                <div class="decorative-elements">
-                    <!-- Floating circle 1: Large yellow circle -->
-                    <div class="floating-circle circle-1"></div>
-                    <!-- Floating circle 2: Medium purple circle -->
-                    <div class="floating-circle circle-2"></div>
-                    <!-- Floating circle 3: Small red circle with pulse animation -->
-                    <div class="floating-circle circle-3"></div>
                 </div>
             </div>
         </section>
